src/block/popup/popup.css
.popup {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  visibility: hidden;
  background-color: white;
}

